--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "recoil": "^0.5.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
