--- a/package.json
+++ b/package.json
@@ -15,7 +15,5 @@
     "recoil": "^0.5.2",
     "styled-components": "^5.2.3"
   },
-  "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0"
-  }
+  "devDependencies": {}
 }
