--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-is": "^17.0.2",
     "react-scroll": "^1.8.4",
     "recoil": "^0.5.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "swiper": "6.0.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/swiper": "^5.4.3"
+  }
 }
