--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@iconscout/react-unicons": "^1.1.6",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,7 +15,5 @@
     "styled-components": "^5.2.3",
     "swiper": "6.0.2"
   },
-  "devDependencies": {
-    "@types/swiper": "^5.4.3"
-  }
+  "devDependencies": {}
 }
